--- a/BertScout2022/BertScout2022/MainPage.xaml
+++ b/BertScout2022/BertScout2022/MainPage.xaml
@@ -5,27 +5,6 @@
              Title="BERT 133 Scouting - 2022">
     
     <ContentPage.Resources>
-        <Style TargetType="Label">
-            <Setter Property="TextColor" Value="Black" />
-            <Setter Property="FontSize" Value="Medium" />
-            <Setter Property="Margin" Value="10,0,0,0" />
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="TextColor" Value="Black" />
-            <Setter Property="BackgroundColor" Value="#007F00" />
-            <Setter Property="FontSize" Value="Medium" />
-            <Setter Property="BorderWidth" Value="1" />
-            <Setter Property="BorderColor" Value="Black" />
-            <Setter Property="CornerRadius" Value="5" />
-            <Setter Property="Margin" Value="0" />
-        </Style>
-        <Style TargetType="Entry">
-            <Setter Property="TextColor" Value="Black" />
-            <Setter Property="BackgroundColor" Value="White" />
-            <Setter Property="FontSize" Value="Medium" />
-            <Setter Property="Margin" Value="0" />
-            <Setter Property="HorizontalTextAlignment" Value="Start" />
-        </Style>
     </ContentPage.Resources>
     
     <ContentPage.Content>
@@ -115,16 +94,20 @@
                             BackgroundColor="#007F00"
                             TextColor="White"
                             Text="Autonomous"
-                            Margin="0,0,10,0"
+                            Margin="0,10,10,0"
                             VerticalOptions="Center"
                             HorizontalTextAlignment="Center"
                         />
                         <!--add auto fields here-->
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="Moved off start:"></Label>
+                            <CheckBox></CheckBox>
+                        </StackLayout>
                         <Label
                             BackgroundColor="#007F00"
                             TextColor="White"
                             Text="Teleoperated"
-                            Margin="0,0,10,0"
+                            Margin="0,10,10,0"
                             VerticalOptions="Center"
                             HorizontalTextAlignment="Center"
                         />
@@ -133,11 +116,19 @@
                             BackgroundColor="#007F00"
                             TextColor="White"
                             Text="End Game"
-                            Margin="0,0,10,0"
+                            Margin="0,10,10,0"
                             VerticalOptions="Center"
                             HorizontalTextAlignment="Center"
                         />
                         <!--add end game fields here-->
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="Won"></Label>
+                            <CheckBox></CheckBox>
+                            <Label Text="Lost"></Label>
+                            <CheckBox></CheckBox>
+                            <Label Text="Tied"></Label>
+                            <CheckBox></CheckBox>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </ScrollView>
