--- a/BertScout2022/BertScout2022/App.xaml
+++ b/BertScout2022/BertScout2022/App.xaml
@@ -7,6 +7,7 @@
             <Setter Property="TextColor" Value="Black" />
             <Setter Property="FontSize" Value="Medium" />
             <Setter Property="Margin" Value="10,0,0,0" />
+            <Setter Property="VerticalOptions" Value="Center" />
         </Style>
         <Style TargetType="Button">
             <Setter Property="TextColor" Value="Black" />
